# devcontainer-py

./: .gitignore  .pre-commit-config.yaml  README.md  clickhouse-kafka.ipynb  clickhouse_init.py  clickhouse_kafka.py  consumer.py  producer.py  pyproject.toml
.devcontainer/: .p10k.zsh  Dockerfile  devcontainer.json  docker-compose.yaml  startup.sh
src/server/: main.py
test/server/: test_main.py
